--- a/src/index.html
+++ b/src/index.html
@@ -7,13 +7,14 @@
       html, body {
         height: 100%;
         margin: 0;
+        overflow:hidden;
       }
       #App {
         height: 100%;
         margin: 0 auto;
       }
     </style>
-  </head>
+   </head>
   <body>
     <div id="App"></div>
   </body>
