--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>reconcIsle</title>
-
-  </head>
-  <body>
-    <div id="App"></div>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<title>reconcIsle</title>
+	</head>
+	<body>
+		<div id="App"></div>
+	</body>
 </html>
