--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>reconcIsle</title>
+		<script src="http://localhost:8097"></script>
 	</head>
 	<body>
 		<div id="App"></div>
